manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-scala-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000 
  type: LoadBalancer
